<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchActivity">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/search_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/search_edit_hint"
            android:inputType="text" />

        <Button
            android:id="@+id/search_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_button_text" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="8dp"
        android:text="Max Cook Time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.041"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="1.0" />

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="168dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.958"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.122">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Cuisine" />

        <Spinner
            android:id="@+id/cuisine_spinner"
            android:layout_width="match_parent"
            android:layout_height="38dp">

        </Spinner>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="74dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="64dp"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout5"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Hours:" />

        <EditText
            android:id="@+id/hours_edit_text"
            android:layout_width="40dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout6"
        tools:layout_editor_absoluteX="46dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Minutes:" />

        <EditText
            android:id="@+id/minutes_edit_text"
            android:layout_width="40dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="153dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
        app:layout_constraintVertical_bias="0.563">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Flavors"
            android:textAlignment="center" />


        <TextView
            android:id="@+id/spicy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/flavor1" />

        <SeekBar
            android:id="@+id/spicyBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="100"
            android:progress="100" />

        <TextView
            android:id="@+id/savory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/flavor2" />

        <SeekBar
            android:id="@+id/savoryBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="100"
            android:progress="100" />

        <TextView
            android:id="@+id/sweet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/flavor3" />

        <SeekBar
            android:id="@+id/sweetBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="100"
            android:progress="100" />

        <TextView
            android:id="@+id/sour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/flavor4" />

        <SeekBar
            android:id="@+id/sourBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="100"
            android:progress="100" />

        <TextView
            android:id="@+id/bitter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/flavor5" />

        <SeekBar
            android:id="@+id/bitterBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="100"
            android:progress="100" />

        <TextView
            android:id="@+id/salty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/flavor6" />

        <SeekBar
            android:id="@+id/saltyBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="100"
            android:progress="100" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="144dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Diet" />

        <CheckBox
            android:id="@+id/vegetarianBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Vegetarian" />

        <CheckBox
            android:id="@+id/veganBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Vegan" />

        <CheckBox
            android:id="@+id/pescetarianBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Pescetarian" />

        <CheckBox
            android:id="@+id/lactoBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Lacto_vegetarian" />

        <CheckBox
            android:id="@+id/ovoBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Ovo_vegetarian" />

        <CheckBox
            android:id="@+id/paleoBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Paleo"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>